# inworkdir

./: .gitignore  README.md  inworkdir.cabal  stack.yaml
src/Control/Monad/: InWorkDir.hs
