name:                inworkdir
version:             0.2.0.1
synopsis:            Monad transformer for a working directory reader
description:         Please see README.md
homepage:            https://github.com/NorfairKing/inworkdir#readme
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           2016 Tom Sydney Kerckhove
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    Control.Monad.InWorkDir
  build-depends:
      base                >= 4.7 && < 5
    , transformers        >= 0.5 && < 0.6
    , transformers-base   >= 0.4 && < 0.5
    , mtl          
    , exceptions
    , monad-control
    , directory           >= 1.2 && < 1.3
    , path                >= 0.5 && < 0.6
    , path-io             >= 1.2 && < 1.3
  default-language:
    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/inworkdir
